# proto_cmake_example

./: CMakeLists.txt
proto/: test.proto
src/: main.cpp
